--- a/Resources/Prototypes/_NF/Events/nf_bluespace_grids_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_bluespace_grids_events.yml
@@ -253,8 +253,8 @@
     earliestStart: 20
     maximumPlayers: 20
     weight: 5
-    duration: 60 #900
-    maxDuration: 60 #1800
+    duration: 900
+    maxDuration: 1800
     reoccurrenceDelay: 240 # once per 4 hours
   - type: BluespaceErrorRule
     groups:
