--- a/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
@@ -175,6 +175,15 @@
 
 # Events
 - type: entity
+  id: WarpPointNFMcDelivery
+  parent: WarpPoint
+  suffix: Event, McDelivery
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: WarpPoint
+    location: McDelivery
+
+- type: entity
   id: WarpPointNFCave
   parent: WarpPoint
   suffix: Event, Cave
