--- a/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
@@ -1,32 +1,32 @@
-- type: entity
-  id: BluespaceDungeon
-  parent: BaseStationEventShortDelay
-  components:
-  - type: StationEvent
-    startAnnouncement: station-event-bluespace-dungeon-start-announcement
-    startAudio:
-      path: /Audio/Announcements/attention.ogg
-    warningAnnouncement: station-event-bluespace-dungeon-warning-announcement
-    endAnnouncement: station-event-bluespace-dungeon-end-announcement
-    earliestStart: 100
-    weight: 5
-    duration: 120 # Temp numba
-    maxDuration: 120 # Temp numba
-    warningDurationLeft: 60 # Temp numba
-    reoccurrenceDelay: 480 # 8 hours
-  - type: BluespaceErrorRule
-    groups:
-      vgroid: !type:DungeonSpawnGroup
-        nameDataset: names_borer
-        minimumDistance: 1500
-        maximumDistance: 2500
-        addComponents:
-        - type: Gravity
-          enabled: true
-          inherent: true
-        - type: IFF
-        - type: Shuttle
-          angularDamping: 999999
-          linearDamping: 999999
-        protos:
-        - NFVGRoid
+# - type: entity
+  # id: BluespaceDungeon
+  # parent: BaseStationEventShortDelay
+  # components:
+  # - type: StationEvent
+    # startAnnouncement: station-event-bluespace-dungeon-start-announcement
+    # startAudio:
+      # path: /Audio/Announcements/attention.ogg
+    # warningAnnouncement: station-event-bluespace-dungeon-warning-announcement
+    # endAnnouncement: station-event-bluespace-dungeon-end-announcement
+    # earliestStart: 100
+    # weight: 5
+    # duration: 120 # Temp numba
+    # maxDuration: 120 # Temp numba
+    # warningDurationLeft: 60 # Temp numba
+    # reoccurrenceDelay: 480 # 8 hours
+  # - type: BluespaceErrorRule
+    # groups:
+      # vgroid: !type:DungeonSpawnGroup
+        # nameDataset: names_borer
+        # minimumDistance: 1500
+        # maximumDistance: 2500
+        # addComponents:
+        # - type: Gravity
+          # enabled: true
+          # inherent: true
+        # - type: IFF
+        # - type: Shuttle
+          # angularDamping: 999999
+          # linearDamping: 999999
+        # protos:
+        # - NFVGRoid
