--- a/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
@@ -10,9 +10,9 @@
     # endAnnouncement: station-event-bluespace-dungeon-end-announcement
     # earliestStart: 100
     # weight: 5
-    # duration: 120 # Temp numba
-    # maxDuration: 120 # Temp numba
-    # warningDurationLeft: 60 # Temp numba
+    # duration: 120 # Temp
+    # maxDuration: 120 # Temp
+    # warningDurationLeft: 60 # Temp
     # reoccurrenceDelay: 480 # 8 hours
   # - type: BluespaceErrorRule
     # groups:
