--- a/Resources/Prototypes/_NF/Palettes/liquids.yml
+++ b/Resources/Prototypes/_NF/Palettes/liquids.yml
@@ -3,12 +3,12 @@
   id: LiquidsBiological
   name: biological liquids
   colors:
-    humanblood: "#800000"
-    humanbloodalt: "#a11818"
-    spiderblood: "#162581"
-    goblinblood: "#364500"
-    sap: "#cd7314"
-    ichor: "#f4692e"
-    vomit: "#87ab08"
-    fat: "#d8d8b0"
-    yellow: "#ceda8b"
+    humanblood: "#800000cc"
+    humanbloodalt: "#a11818cc"
+    spiderblood: "#162581cc"
+    goblinblood: "#364500cc"
+    sap: "#cd7314cc"
+    ichor: "#f4692ecc"
+    vomit: "#87ab08cc"
+    fat: "#d8d8b0cc"
+    yellow: "#ceda8bcc"
