Warning fluent entries, bluespace dungeon comments

--- a/Resources/Prototypes/_NF/Events/nf_bluespace_grids_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_bluespace_grids_events.yml
@@ -6,6 +6,7 @@
     startAnnouncement: station-event-bluespace-cache-start-announcement
     startAudio:
       path: /Audio/Announcements/attention.ogg
+    warningAnnouncement: station-event-bluespace-cache-warning-announcement
     endAnnouncement: station-event-bluespace-cache-end-announcement
     earliestStart: 100
     weight: 5
@@ -42,6 +43,7 @@
     startAnnouncement: station-event-bluespace-vault-start-announcement
     startAudio:
       path: /Audio/Announcements/attention.ogg
+    warningAnnouncement: station-event-bluespace-vault-warning-announcement
     endAnnouncement: station-event-bluespace-vault-end-announcement
     earliestStart: 100
     weight: 5
@@ -78,6 +80,7 @@
     startAnnouncement: station-event-bluespace-vault-start-announcement
     startAudio:
       path: /Audio/Announcements/attention.ogg
+    warningAnnouncement: station-event-bluespace-vault-warning-announcement
     endAnnouncement: station-event-bluespace-vault-end-announcement
     earliestStart: 100
     maximumPlayers: 30
@@ -115,6 +118,7 @@
     startAnnouncement: station-event-bluespace-generic-ftl-start-announcement
     startAudio:
       path: /Audio/Misc/notice1.ogg
+    warningAnnouncement: station-event-bluespace-generic-ftl-warning-announcement
     endAnnouncement: station-event-bluespace-generic-ftl-end-announcement
     earliestStart: 80
     minimumPlayers: 15
@@ -149,6 +153,7 @@
     startAnnouncement: station-event-bluespace-generic-ftl-start-announcement
     startAudio:
       path: /Audio/Misc/notice1.ogg
+    warningAnnouncement: station-event-bluespace-generic-ftl-warning-announcement
     endAnnouncement: station-event-bluespace-generic-ftl-end-announcement
     earliestStart: 100
     minimumPlayers: 15
@@ -183,6 +188,7 @@
     startAnnouncement: station-event-bluespace-generic-ftl-start-announcement
     startAudio:
       path: /Audio/Misc/notice1.ogg
+    warningAnnouncement: station-event-bluespace-generic-ftl-warning-announcement
     endAnnouncement: station-event-bluespace-generic-ftl-end-announcement
     earliestStart: 80
     minimumPlayers: 15
@@ -217,6 +223,7 @@
     startAnnouncement: station-event-bluespace-generic-ftl-start-announcement
     startAudio:
       path: /Audio/Misc/notice1.ogg
+    warningAnnouncement: station-event-bluespace-generic-ftl-warning-announcement
     endAnnouncement: station-event-bluespace-generic-ftl-end-announcement
     earliestStart: 20
     weight: 1
@@ -249,6 +256,7 @@
     startAnnouncement: station-event-bluespace-generic-ftl-start-announcement
     startAudio:
       path: /Audio/Misc/notice1.ogg
+    warningAnnouncement: station-event-bluespace-generic-ftl-warning-announcement
     endAnnouncement: station-event-bluespace-generic-ftl-end-announcement
     earliestStart: 20
     maximumPlayers: 20
