Bluespace rule + Events cleanup and improvements (#2337)
* First

* Cleanup 1

* cleanup

* Here we go

* Works

* Getting closer

* Update dungeons.yml

* Update ShuttleSystem.GridFill.cs

* Update dungeons.yml

* Update basic.yml

* Update GridSpawnComponent.cs

* Update basic.yml

* Update OwnedDebrisComponent.cs

* Update ShuttleSystem.GridFill.cs

* Update ShuttleSystem.GridFill.cs

* Replace events spawner code

* Update GridSpawnComponent.cs

* Update GridSpawnComponent.cs

* fixups

* fixup

* Edits

* FTL, Working warnings

* comp

* Fix this please

* Update BluespaceErrorRule.cs

* Support multi grids

* Add radio support

* Rename files

* Update nf_bluespace_grids_events.yml

* Event Mc

* Cleanup

* Update nf_bluespace_dungeons_events.yml

* Temp Restore space dungeon

* Update StationEventComponent.cs

* Update StationEventSystem.cs

* WIP: bluespace event random order

* position fix

* assign to WithPosition

* Warning fluent entries, bluespace dungeon comments

* BluespaceErrorRuleComponent cleanup

---------

Co-authored-by: Whatstone <whatston3@gmail.com>

--- a/Resources/Prototypes/_NF/GameRules/roundstart.yml
+++ b/Resources/Prototypes/_NF/GameRules/roundstart.yml
@@ -4,7 +4,7 @@
   categories: [ HideSpawnMenu ]
   components:
   - type: AdventureRule
-    spaceDungeons:
+    spaceDungeons: # TODO: Remove with new system
     - CaveFactory
     - MedSci
     - FactoryDorms
