Fix for goblinbane pilots
Removed ability for goblinbanes to pilot shuttles and take over the galaxy

--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane.yml
@@ -134,7 +134,7 @@
     followEntity: true
     maxIffRange: 256
     hideCoords: true
-  - type: ComplexInteraction
+  # - type: ComplexInteraction
   # Abilities
   - type: Devourer
     foodPreference: Humanoid
