Fixed an issue with diagonal grilles blocking laser shots.

--- a/Resources/Prototypes/Entities/Structures/Walls/grille.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/grille.yml
@@ -194,7 +194,7 @@
           mask:
           - FullTileMask
           layer:
-          - WallLayer
+          - GlassLayer
     - type: Construction
       graph: GrilleDiagonal
       node: grilleDiagonal
@@ -229,7 +229,7 @@
           mask:
           - FullTileMask
           layer:
-          - WallLayer
+          - GlassLayer
     - type: Construction
       graph: GrilleDiagonal
       node: clockworkGrilleDiagonal
