--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane.yml
@@ -134,7 +134,7 @@
     followEntity: true
     maxIffRange: 256
     hideCoords: true
-  # - type: ComplexInteraction
+  # - type: ComplexInteraction # Frontier: Removed to prevent piloting shuttles
   # Abilities
   - type: Devourer
     foodPreference: Humanoid
