--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/salvage.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/salvage.yml
@@ -10,6 +10,7 @@
     OreBag: 6 # Frontier: 2<6
     Floodlight: 10 # Frontier
     Flare: 20 # Frontier: 4<20
+    BoxDispenserFlare: 5 # Frontier
     FlashlightLantern: 15 # Frontier: 2<15
     HandheldGPSBasic: 15 # Frontier: 2<15
     RadioHandheldNF: 5 # Frontier: 2<5, RadioHandheld<RadioHandheldNF
