--- a/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/salvage.yml
+++ b/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/salvage.yml
@@ -12,6 +12,7 @@
     RadioHandheldNF: 4294967295 # Infinite
     HandheldGPSBasic: 4294967295 # Infinite
     Flare: 4294967295 # Infinite
+    BoxDispenserFlare: 4294967295 # Infinite
     FlashlightLantern: 4294967295 # Infinite
 #    FultonBeacon: 6
 #    Fulton: 12
