--- a/Resources/Prototypes/_NF/Procedural/Themes/vgroidinterior.yml
+++ b/Resources/Prototypes/_NF/Procedural/Themes/vgroidinterior.yml
@@ -100,6 +100,7 @@
   name: NFVGRoid interior marker
   components:
   - type: RoomFill
+    size: 5,5
     roomWhitelist:
       tags:
       - NFVGRoidInterior
