--- a/Resources/Prototypes/_NF/Procedural/basalt_vgroid.yml
+++ b/Resources/Prototypes/_NF/Procedural/basalt_vgroid.yml
@@ -33,6 +33,12 @@
       count: 50
       minGroupSize: 1
       maxGroupSize: 1
+    - !type:OreDunGen
+      replacement: WallRockBasalt
+      entity: FloorLavaEntity
+      count: 40
+      minGroupSize: 8
+      maxGroupSize: 12
     # Ores
     - !type:OreDunGen
       replacement: WallRockBasalt
