--- a/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
@@ -192,6 +192,16 @@
   - type: WarpPoint
     location: Cave
 
+# Dungeon
+- type: entity
+  id: WarpPointNFDengeonBasalt
+  parent: WarpPoint
+  suffix: Dungeon, Basalt
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: WarpPoint
+    location: Dungeon (Basalt)
+
 # DeadDrop
 - type: entity
   id: WarpPointNFSyndicateSupplyDrop
