--- a/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
@@ -1,19 +1,21 @@
 - type: entity
   id: BluespaceDungeonBasalt
   parent: BaseStationEventShortDelay
+  name: NT
+  categories: [ HideSpawnMenu ]
   components:
   - type: StationEvent
-    startAnnouncement: station-event-bluespace-dungeon-start-announcement
-    startAudio:
-      path: /Audio/Announcements/attention.ogg
-    warningAnnouncement: station-event-bluespace-dungeon-warning-announcement
-    endAnnouncement: station-event-bluespace-dungeon-end-announcement
-    earliestStart: 100
+    startRadioAnnouncement: station-event-bluespace-dungeon-start-announcement
+    startRadioAnnouncementChannel: Supply
+    warningRadioAnnouncement: station-event-bluespace-dungeon-warning-announcement
+    warningRadioAnnouncementChannel: Supply
+    endRadioAnnouncement: station-event-bluespace-dungeon-end-announcement
+    endRadioAnnouncementChannel: Supply
+    earliestStart: 10
     weight: 5
     duration: 1200 # Temp
     maxDuration: 1200 # Temp
-    warningDurationLeft: 60 # Temp
-    reoccurrenceDelay: 480 # 8 hours
+    reoccurrenceDelay: 60 # 1 hour
   - type: BluespaceErrorRule
     groups:
       vgroid: !type:DungeonSpawnGroup
@@ -30,3 +32,6 @@
           linearDamping: 999999
         protos:
         - NFVGRoidBasalt
+  - type: ActiveRadio
+    channels:
+    - Supply
