--- a/Resources/Prototypes/_NF/GameRules/roundstart.yml
+++ b/Resources/Prototypes/_NF/GameRules/roundstart.yml
@@ -30,6 +30,24 @@
     - id: BluespaceBloodMoon
 
 - type: entity
+  id: BluespaceEventScheduler
+  parent: BaseGameRule
+  components:
+  - type: BasicStationEventScheduler
+    scheduledGameRules: !type:NestedSelector
+      tableId: DungeonBluespaceEventsTable
+    minimumTimeUntilFirstEvent: 600 # 10 minutes
+    minMaxEventTiming:
+      min: 600 # 10 minutes between events
+      max: 600 # 10 minutes between events
+
+- type: entityTable
+  id: DungeonBluespaceEventsTable
+  table: !type:AllSelector # we need to pass a list of rules, since rules have further restrictions to consider via StationEventComp
+    children:
+    - id: BluespaceDungeonBasalt
+
+- type: entity
   id: SmugglingEventScheduler
   parent: BaseGameRule
   components:
