--- a/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
@@ -202,6 +202,24 @@
   - type: WarpPoint
     location: Dungeon (Basalt)
 
+- type: entity
+  id: WarpPointNFDengeonSnow
+  parent: WarpPoint
+  suffix: Dungeon, Snow
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: WarpPoint
+    location: Dungeon (Snow)
+
+- type: entity
+  id: WarpPointNFDengeonRock
+  parent: WarpPoint
+  suffix: Dungeon, Rock
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: WarpPoint
+    location: Dungeon (Rock)
+
 # DeadDrop
 - type: entity
   id: WarpPointNFSyndicateSupplyDrop
