--- a/Resources/Prototypes/Corvax/Events/events_bluespace.yml
+++ b/Resources/Prototypes/Corvax/Events/events_bluespace.yml
@@ -1,30 +1,45 @@
-- type: entity # Corvax-Frontier
+#Corvax-Frontier (by. Mersen)
+- type: entity
   id: BluespaceCargoniaShip
   parent: BaseStationEventShortDelay
   components:
   - type: StationEvent
-    startAnnouncement: station-event-bluespace-ship-start-announcement
+    startAnnouncement: station-event-bluespace-generic-ftl-start-announcement
     startAudio:
-      path: /Audio/Announcements/attention.ogg
-    endAnnouncement: station-event-bluespace-ship-end-announcement
-    earliestStart: 100
+      path: /Audio/Misc/notice1.ogg
+    warningAnnouncement: station-event-bluespace-generic-ftl-warning-announcement
+    endAnnouncement: station-event-bluespace-generic-ftl-end-announcement
+    earliestStart: 80
     minimumPlayers: 15
     weight: 2
-    duration: 900
-    maxDuration: 1200
+    duration: 3800
+    maxDuration: 6400
     reoccurrenceDelay: 180 # Only once per shift possible
   - type: BluespaceErrorRule
-    gridPaths:
-      - /Maps/_NF/Bluespace/cargoniaship.yml
-      - /Maps/Corvax/Bluespace/RuinedHauler.yml #Corvax-Frontier
-      - /Maps/Corvax/Bluespace/RuinedBarge.yml #Corvax-Frontier
-      - /Maps/Corvax/Bluespace/RuinedCourser.yml #Corvax-Frontier
-      - /Maps/Corvax/Bluespace/RuinedComet.yml #Corvax-Frontier
-      - /Maps/Corvax/Bluespace/RuinedCrescent.yml #Corvax-Frontier
-      - /Maps/Corvax/Bluespace/RuinedInv.yml #Corvax-Frontier
-      - /Maps/Corvax/Bluespace/RuinedSprinter.yml #Corvax-Frontier
-    rewardFactor: 0.1 # Filler to make the bank go up
-
+    groups:
+      grid: !type:GridSpawnGroup
+        nameLoc:
+        - station-event-bluespace-name-UnidentifiedVessel
+        minimumDistance: 1500
+        maximumDistance: 2500
+        addComponents:
+        - type: Gravity
+          enabled: true
+          inherent: true
+        - type: IFF
+          color: "#E10F9B"
+        - type: Shuttle
+          angularDamping: 999999
+          linearDamping: 999999
+        paths:
+        - /Maps/Corvax/Bluespace/RuinedHauler.yml #Corvax-Frontier
+        - /Maps/Corvax/Bluespace/RuinedBarge.yml #Corvax-Frontier
+        - /Maps/Corvax/Bluespace/RuinedCourser.yml #Corvax-Frontier
+        - /Maps/Corvax/Bluespace/RuinedComet.yml #Corvax-Frontier
+        - /Maps/Corvax/Bluespace/RuinedCrescent.yml #Corvax-Frontier
+        - /Maps/Corvax/Bluespace/RuinedInv.yml #Corvax-Frontier
+        - /Maps/Corvax/Bluespace/RuinedSprinter.yml #Corvax-Frontier
+    nfsdRewardFactor: 0.1
 - type: entity
   id: BluespaceSyndicateFTLRepeater
   parent: BaseStationEventShortDelay
@@ -33,6 +48,7 @@
     startAnnouncement: station-event-bluespace-generic-ftl-start-announcement
     startAudio:
       path: /Audio/Misc/notice1.ogg
+    warningAnnouncement: station-event-bluespace-generic-ftl-warning-announcement
     endAnnouncement: station-event-bluespace-generic-ftl-end-announcement
     earliestStart: 80
     minimumPlayers: 15
@@ -41,7 +57,22 @@
     maxDuration: 6400
     reoccurrenceDelay: 180 # Only once per shift possible
   - type: BluespaceErrorRule
-    gridPaths:
-      - /Maps/Corvax/Bluespace/epsilon.yml
-      - /Maps/Corvax/Bluespace/sindi.yml
-    rewardFactor: 0.01 # Filler to make the bank go up
+    groups:
+      grid: !type:GridSpawnGroup
+        nameLoc:
+        - station-event-bluespace-name-UnidentifiedVessel
+        minimumDistance: 1500
+        maximumDistance: 2500
+        addComponents:
+        - type: Gravity
+          enabled: true
+          inherent: true
+        - type: IFF
+          color: "#E10F9B"
+        - type: Shuttle
+          angularDamping: 999999
+          linearDamping: 999999
+        paths:
+        - /Maps/Corvax/Bluespace/sindi.yml
+        - /Maps/Corvax/Bluespace/epsilon.yml
+    nfsdRewardFactor: 0.5
