--- a/Resources/Maps/_NF/Dungeon/haunted.yml
+++ b/Resources/Maps/_NF/Dungeon/haunted.yml
@@ -2824,7 +2824,7 @@ entities:
     - type: Transform
       pos: 36.5,31.5
       parent: 1653
-- proto: ToiletMemeSpawner
+- proto: ToiletEmpty
   entities:
   - uid: 406
     components:
