--- a/Resources/Maps/_NF/Dungeon/lava_brig.yml
+++ b/Resources/Maps/_NF/Dungeon/lava_brig.yml
@@ -12152,7 +12152,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 12.5,43.5
       parent: 588
-- proto: ToiletMemeSpawner
+- proto: ToiletEmpty
   entities:
   - uid: 932
     components:
