--- a/Resources/Maps/_NF/Dungeon/snowy_labs.yml
+++ b/Resources/Maps/_NF/Dungeon/snowy_labs.yml
@@ -13489,7 +13489,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 45.5,1.5
       parent: 1653
-- proto: ToiletMemeSpawner
+- proto: ToiletEmpty
   entities:
   - uid: 889
     components:
