--- a/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
@@ -11,11 +11,11 @@
     warningRadioAnnouncementChannel: Supply
     endRadioAnnouncement: station-event-bluespace-dungeon-end-announcement
     endRadioAnnouncementChannel: Supply
-    earliestStart: 10
+    earliestStart: 10 # 10 Minutes
     weight: 5
-    duration: 1200 # Temp
-    maxDuration: 1200 # Temp
-    reoccurrenceDelay: 60 # 1 hour
+    duration: 3600 # 1 hour
+    maxDuration: 3600 # 1 hour
+    reoccurrenceDelay: 120 # 2 hours
   - type: ActiveRadio
     channels:
     - Supply
