--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/flare.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/flare.yml
@@ -11,7 +11,7 @@
     - state: flare
   - type: BallisticAmmoProvider
     whitelist:
-      tag:
+      tags:
       - Flare
     proto: Flare
     capacity: 12
